Creo un archivo readme donde informaré sobre información relevante para la evalución de la práctica

--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Añado el título -->
     <title>Práctica portafolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" target ="_blank">
 </head>
 
 
 <body>
-    
+    <!--Para poner imágenes se suele usar figure-->
+    <figure>
+        <img src="link a mi foto del portafolios.png"
+        width="150px"
+        title="logo portafolios"
+        alt="logo  png" >
+        <!--Muestra una leyenda de la foto-->
+        <figcaption>foto personal</figcaption>
+    </figure>
 </body>
 </html>
